# Genesis

./: .gitmodules  Build.bat  Build.cmd  Build.sh  CMakeLists.txt  LICENSE  LICENSE.md  README.md  build_output.txt
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.h  IWindow.h  Physics.h  SDLWindow.h
Engine/src/: Engine.cpp  SDLWindow.cpp
Engine/src/Physics/: Physics.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
